[gd_scene load_steps=22 format=3 uid="uid://don15t7wus6lr"]

[ext_resource type="Script" path="res://Objects/Gameplay/GM.gd" id="1_mvxwo"]
[ext_resource type="PackedScene" uid="uid://itihdsxsasau" path="res://Objects/Gameplay/Enemies/enemy.tscn" id="2_wxu82"]
[ext_resource type="PackedScene" uid="uid://chbjox8nn5cvg" path="res://Objects/Gameplay/Player.tscn" id="3_t8iqy"]
[ext_resource type="PackedScene" uid="uid://xbxmk0gyn1ok" path="res://Objects/Gameplay/Enemies/enemy_DragonFly.tscn" id="3_vsp37"]
[ext_resource type="Texture2D" uid="uid://c3ckcex7bhqy4" path="res://Sprites/Backgrounds/beetlebarragebg.png" id="4_0rbwn"]
[ext_resource type="Script" path="res://Levels/enemy_spawn_system.gd" id="4_du6xc"]
[ext_resource type="Texture2D" uid="uid://i8dnnuog66dj" path="res://icon.svg" id="5_f61so"]
[ext_resource type="PackedScene" uid="uid://qq1i6vy2tl5d" path="res://Objects/UI/HUD.tscn" id="6_n24og"]
[ext_resource type="PackedScene" uid="uid://cbr8dj4m1b3wo" path="res://Objects/UI/DeathScreen.tscn" id="7_wgg82"]
[ext_resource type="AudioStream" uid="uid://b74ytc25u773o" path="res://Audio/Beetle DEATHstinger MASTER v.1.mp3" id="8_ygr2a"]
[ext_resource type="PackedScene" uid="uid://l1tyad5h23oj" path="res://Objects/UI/AbilityPickUp/AbilityPickUp.tscn" id="9_e4uxq"]
[ext_resource type="AudioStream" uid="uid://dkl0a8k3apbjb" path="res://Audio/11.17.23 Game jam session 1 v.21 SIREN.mp3" id="9_q7lyu"]
[ext_resource type="AudioStream" uid="uid://k5j710i7p807" path="res://Audio/BeetleBarrage MASTER v.2 march2024.mp3" id="10_eprq5"]
[ext_resource type="PackedScene" uid="uid://ditefqqnfk7uh" path="res://Objects/Gameplay/Obstacles/Obstacle.tscn" id="11_cx8ds"]
[ext_resource type="PackedScene" uid="uid://chhbjyq03762o" path="res://Objects/Gameplay/Obstacles/Obstacle2.tscn" id="12_xsnqo"]
[ext_resource type="PackedScene" uid="uid://dc7jfold0vs53" path="res://Objects/Gameplay/Obstacles/Obstacle_Cactus.tscn" id="13_7kuxr"]
[ext_resource type="Texture2D" uid="uid://drp607igopxuf" path="res://Sprites/seamlessspacejunktiledingame.png" id="17_5s836"]
[ext_resource type="Texture2D" uid="uid://b5qmqp43g2wh4" path="res://Sprites/Backgrounds/brown.png" id="18_b3dp5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ql7q5"]

[sub_resource type="Curve2D" id="Curve2D_8ahb6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1784, -1085, 0, 0, 0, 0, 1802, -1091, 0, 0, 0, 0, 1773, 1109, 0, 0, 0, 0, -1783, 1117, 0, 0, 0, 0, -1784, -1085)
}
point_count = 5

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nefgq"]

[node name="Level" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_mvxwo")

[node name="Timer" type="Timer" parent="GameManager"]
process_callback = 0
autostart = true

[node name="EnemySpawnSystem" type="Node" parent="GameManager"]
script = ExtResource("4_du6xc")
EnemyInstance = ExtResource("2_wxu82")
Enemy_Dragonfly_Instance = ExtResource("3_vsp37")

[node name="spawnTimer" type="Timer" parent="GameManager/EnemySpawnSystem"]
process_callback = 0
wait_time = 2.5
autostart = true

[node name="Icon" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.654902, 0.654902, 0.654902, 1)
z_index = -100
position = Vector2(-2.00002, 19)
scale = Vector2(-1.571, 1.918)
texture = ExtResource("4_0rbwn")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(0, 980)
scale = Vector2(166.12, 11.44)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource("RectangleShape2D_ql7q5")

[node name="Icon2" type="Sprite2D" parent="StaticBody2D2"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.16, 0.16)
texture = ExtResource("5_f61so")

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(0, -980)
scale = Vector2(148.6, 7.174)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource("RectangleShape2D_ql7q5")

[node name="Icon2" type="Sprite2D" parent="StaticBody2D4"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.16, 0.16)
texture = ExtResource("5_f61so")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(1516, 0)
scale = Vector2(9.12299, 98.6284)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource("RectangleShape2D_ql7q5")

[node name="Icon2" type="Sprite2D" parent="StaticBody2D3"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.16, 0.16)
texture = ExtResource("5_f61so")

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(-1516, 0)
scale = Vector2(9.12299, 98.6284)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
shape = SubResource("RectangleShape2D_ql7q5")

[node name="Icon2" type="Sprite2D" parent="StaticBody2D5"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.16, 0.16)
texture = ExtResource("5_f61so")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_8ahb6")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-1784, -1085)
rotation = -0.00167317

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" node_paths=PackedStringArray("gameManager") instance=ExtResource("6_n24og")]
mouse_filter = 2
gameManager = NodePath("../../GameManager")

[node name="DeathScreen" parent="CanvasLayer" node_paths=PackedStringArray("gameManager", "player") instance=ExtResource("7_wgg82")]
visible = false
gameManager = NodePath("../../GameManager")
player = NodePath("../../Player")

[node name="AbilityPickUp" parent="CanvasLayer" instance=ExtResource("9_e4uxq")]
visible = false

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ygr2a")

[node name="Player" parent="." instance=ExtResource("3_t8iqy")]
position = Vector2(0, -3)
collision_layer = 5
collision_mask = 4

[node name="Siren" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_q7lyu")
volume_db = -80.0
autoplay = true

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("10_eprq5")
volume_db = -8.725
autoplay = true

[node name="Obstacle11" parent="." instance=ExtResource("11_cx8ds")]
position = Vector2(-601, -99)
scale = Vector2(7.4, 6.36)

[node name="Obstacle15" parent="." instance=ExtResource("11_cx8ds")]
position = Vector2(555, -120)
scale = Vector2(7.4, 6.36)

[node name="Obstacle16" parent="." instance=ExtResource("11_cx8ds")]
position = Vector2(-27, -651)
scale = Vector2(7.4, 6.36)

[node name="Obstacle17" parent="." instance=ExtResource("11_cx8ds")]
position = Vector2(-73, 636)
scale = Vector2(7.4, 6.36)

[node name="Obstacle2" parent="." instance=ExtResource("12_xsnqo")]
position = Vector2(-2216, -867)
scale = Vector2(6.79402, 5.84897)

[node name="Obstacle6" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(-1332, 779)
scale = Vector2(3.335, 3.335)

[node name="Obstacle7" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(-1372, -842)
scale = Vector2(3.335, 3.335)

[node name="Obstacle8" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(1367, -885)
scale = Vector2(3.335, 3.335)

[node name="Obstacle9" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(1356, 813)
scale = Vector2(3.335, 3.335)

[node name="Obstacle10" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(542, 268)
scale = Vector2(3.335, 3.335)

[node name="Obstacle12" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(-769, 283)
scale = Vector2(3.335, 3.335)

[node name="Obstacle13" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(-805, -463)
scale = Vector2(3.335, 3.335)

[node name="Obstacle14" parent="." instance=ExtResource("13_7kuxr")]
position = Vector2(602, -495)
scale = Vector2(3.335, 3.335)

[node name="Seamlessspacejunktiledingame" type="Sprite2D" parent="."]
z_index = -100
texture_repeat = 2
position = Vector2(48, 3)
texture = ExtResource("17_5s836")
region_enabled = true
region_rect = Rect2(0, 0, 3560, 2000)

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_nefgq")
offset_left = 1571.0
offset_top = -827.0
offset_right = 3760.0
offset_bottom = 578.0

[node name="Brown" type="Sprite2D" parent="."]
z_index = -110
position = Vector2(-8.99976, -40.375)
scale = Vector2(67.1739, 43.0389)
texture = ExtResource("18_b3dp5")

[connection signal="timeout" from="GameManager/Timer" to="GameManager" method="_on_timer_timeout"]
[connection signal="timeout" from="GameManager/EnemySpawnSystem/spawnTimer" to="GameManager/EnemySpawnSystem" method="_on_spawn_timer_timeout"]
